# rehablarte

./: .env  .gitignore  Dockerfile  docker-compose.yml  download_voice.py  pyproject.toml  readme.md
bot-rehablarte-collection/: api-rae-daily.bru  api-rae-random.bru  api-rae-words.bru  bruno.json  collection.bru
scripts/: download_voice.py
src/: bot.py  decorators.py  logger.py  main.py  tts.py
src/api/: api_rae.py  config.py
src/handlers/: errors_handler.py  member_commands.py  response_handler.py
src/models/: palabra_entity.py
src/modules/: stt.py  tts.py
src/utils/: logger.py
